Apply checkstyle fixes and formatting